force-app/main/default/objects/FEC_Task_Creation_Rule__mdt.object
<CustomObject>
    <description>FEC Task Creation Rules US 169194</description>
    <label>FEC Task Creation Rule</label>
    <pluralLabel>FEC Task Creation Rules</pluralLabel>
</CustomObject>