force-app/main/default/objects/FEC_Task_Creation_Rule__mdt/fields/lowerLimitInDays__c.field-meta.xml
<CustomField>
    <fullName>lowerLimitInDays__c</fullName>
    <label>lowerLimitInDays</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>