force-app/main/default/objects/FEC_Task_Creation_Rule__mdt/fields/taskSubTypeDefault__c.field-meta.xml
<CustomField>
    <fullName>taskSubTypeDefault__c</fullName>
    <label>taskSubTypeDefault</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Less than 10% within 3 days</fullName>
                <default>true</default>
                <label>Less than 10% within 3 days</label>
            </value>
            <value>
                <fullName>Less than 33% within 5 days</fullName>
            </value>
            <value>
                <fullName>Less than 45% within 7 days</fullName>
            </value>
            <value>
                <fullName>Less than 75% within 10 days</fullName>
            </value>
            <value>
                <fullName>Less than 90% within 21 days</fullName>
            </value>
            <value>
                <fullName>Initial Call</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>