force-app/main/default/objects/FEC_Task_Creation_Rule__mdt/fields/taskTypeDefault__c.field-meta.xml
<CustomField>
    <fullName>taskTypeDefault__c</fullName>
    <label>taskTypeDefault</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Student Progress</fullName>
                <default>true</default>
                <label>Student Progress</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>