force-app/main/default/objects/FEC_Task_Creation_Rule__mdt/fields/thresholdPercent__c.field-meta.xml
<CustomField>
    <fullName>thresholdPercent__c</fullName>
    <label>thresholdPercent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>