force-app/main/default/objects/FEC_Task_Creation_Rule__mdt/fields/upperLimitInDays__c.field-meta.xml
<CustomField>
    <fullName>upperLimitInDays__c</fullName>
    <label>upperLimitInDays</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>