force-app/main/default/objects/FEC_Task_Creation_Rule__mdt/listViews/ALL_CUSTOM.listView-meta.xml
<ListView>
    <fullName>ALL_CUSTOM</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Order__c</columns>
    <columns>thresholdPercent__c</columns>
    <columns>lowerLimitInDays__c</columns>
    <columns>upperLimitInDays__c</columns>
    <columns>taskTypeDefault__c</columns>
    <columns>taskSubTypeDefault__c</columns>
    <filterScope>Everything</filterScope>
    <label>ALL_CUSTOM</label>
</ListView>